--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "browser-sync": "2.11.1",
     "chai": "3.4.1",
     "cheerio": "0.19.0",
+    "classnames": "2.2.5",
     "colors": "1.1.2",
     "cross-env": "1.0.7",
     "css-loader": "0.23.1",
