--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "object-assign": "4.0.1",
     "react": "15.0.0",
     "react-dom": "15.0.0",
+    "react-google-charts": "0.2.1",
     "react-redux": "4.4.0",
     "react-router": "2.0.0",
     "redux": "3.3.1"
